<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewAdapterItemLista"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical|start"
            android:text="@string/titulo"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPrecoAdapter"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"

            android:gravity="center"
            android:text="@string/preco"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="70dp"
            android:layout_height="20dp"

            android:gravity="center"
            android:text="@string/data"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>