<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_back"
    android:screenOrientation="portrait"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageTutoConsumoPorLitroResultado"
        android:layout_width="345dp"
        android:layout_height="355dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutoTextConsumo"
        app:srcCompat="@drawable/tuto_consumo_por_litro_resultado2"
        android:contentDescription="@string/descImg" />

    <TextView
        android:id="@+id/textTutoConsumoPorLitro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tutorial_consumo_por_litro"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTutoTextConsumo2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/TextConsumoPorLitro2"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTutoConsumoPorLitroResultado" />

    <TextView
        android:id="@+id/textTutoTextConsumo"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/TextConsumoPorLitro"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutoConsumoPorLitro2" />

</androidx.constraintlayout.widget.ConstraintLayout>