<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_back"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageTutoConsumoPorLitro"
        android:layout_width="345dp"
        android:layout_height="355dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/descImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutoTextConsumo1"
        app:srcCompat="@drawable/tuto_consumo_por_litro" />

    <TextView
        android:id="@+id/textTutoTextConsumo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/textConsumo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textTutoConsumoPorLitro"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textTutoConsumoPorLitro"
        app:layout_constraintTop_toBottomOf="@+id/textTutoConsumoPorLitro" />

    <TextView
        android:id="@+id/textTutoConsumoPorLitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tutorial_consumo_por_litro"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>