<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/degrade_back"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="330dp"
            android:layout_height="450dp"

            android:background="@drawable/shape_canto_aredondado"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutGastos"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
                android:hint="@string/titulo"
                android:textColorHint="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextGasto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/dark_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutData"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
                android:hint="@string/tituloData"
                android:textColorHint="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPreco">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPreco"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"

                android:hint="@string/tituloPreco"
                android:textColorHint="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGastos">

                <me.abhinay.input.CurrencyEditText
                    android:id="@+id/textInputEditTextPreco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSalvarGasto"
                android:layout_width="191dp"
                android:layout_height="51dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_degrade"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutData" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/novoGasto"
                android:textColor="@color/dark_gray"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewAddGasto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:foregroundGravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9067087122803339/3463215631"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewAddGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:foregroundGravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9067087122803339/8496050467"
        app:layout_constraintBottom_toTopOf="@+id/adViewAddGasto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>